<resources>
    <string name="app_name">Four by four</string>
    <string name="buttonNewGameText">New game</string>
    <string name="buttonGameRulesText">Game rules</string>
    <string name="imageView_empty">empty</string>
    <string name="button_resume_text">Resume</string>
    <string name="botton_setting_text">Settings</string>
    <string name="button_statistics_text">Statistics</string>
    <string name="imageview_backstage_content_description">Screensaver</string>
    <string name="textview_statistics_title">Game Mode</string>
    <string name="textview_no_time_limit">No time limit</string>
    <string name="textview_victory_label">Victories</string>
    <string name="textview_games_label">Games</string>
    <string name="textview_percent_label">Percentage of victories</string>
    <string name="textview_one_min">1 minute</string>
    <string name="textview_three_min">3 minute</string>
    <string name="textview_five_min">5 minutes</string>
    <string name="message_win">You win!</string>
    <string name="message_lose">You lose</string>
    <string name="button_menu">Menu</string>
    <string name="textview_setting_time_mode">Game time:</string>
    <string name="textview_setting_game_mode">Game mode:</string>
    <string name="textview_settings_sound">Game sound:</string>
    <string name="textview_settings_off">Turn off</string>
    <string name="textview_settings_on">Turn on</string>
    <string name="textview_game_rules_one">This game develops logic, intelligence and memory. At the beginning of the game, you can set a timer. Timing variations: 1 minute, 3 minutes, 5 minutes. It is also possible to play without a time limit. There are 3 game modes: simple, with a partition and with a movable partition.</string>
    <string name="textview_game_rules_two">"After the start of the game, 16 chips of 4 different colors appear on the playing field. The playing field is divided into 4 sectors. "</string>
    <string name="textview_game_rules_three">The player\'s task is to place chips of the same color in each of the 4 sectors.</string>
    <string name="textview_game_rules_four">In the game mode with a movable partition, it can be rearranged into other passages, but all passages must be free of chips.</string>
    <string name="textview_statistics_simple">Simple</string>
    <string name="textview_partition_wall">With a partition wall</string>
    <string name="textview_mobile_partition_wall">With a movable partition</string>
    <string name="text_my_menu_button">Back</string>
    <string-array name="timeSettings">
        <item>@string/textview_no_time_limit</item>
        <item>@string/textview_one_min</item>
        <item>@string/textview_three_min</item>
        <item>@string/textview_five_min</item>
    </string-array>
    <string-array name="gameSettings">
        <item>@string/textview_statistics_simple</item>
        <item>@string/textview_partition_wall</item>
        <item>@string/textview_mobile_partition_wall</item>
    </string-array>
</resources>