<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:circularflow_radiusInDP="16dp"
    tools:context=".SettingsActivity">

    <include
    android:id="@+id/toolbar"
    layout="@layout/toolbar"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/imageview_backstage_content_description"
            android:scaleType="centerCrop"
            android:src="@drawable/backstage_main"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewSettingTimeMode"
                    style="@style/textViewSettingsModeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_setting_time_mode"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <com.vladmikh.projects.four_by_four.CustomSpinner
                    android:id="@+id/spinnerTime"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:dropDownVerticalOffset="40dp"
                    android:layout_margin="16dp"
                    android:background="@drawable/spinner_time_style"
                    android:entries="@array/timeSettings"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textViewSettingTimeMode"
                    app:layout_constraintBottom_toTopOf="@id/textViewSettingGameMode"
                    />

                <TextView
                    android:id="@+id/textViewSettingGameMode"
                    style="@style/textViewSettingsModeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_setting_game_mode"
                    app:layout_constraintTop_toBottomOf="@id/spinnerTime"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <com.vladmikh.projects.four_by_four.CustomSpinner
                    android:id="@+id/spinnerGame"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:dropDownVerticalOffset="40dp"
                    android:layout_margin="16dp"
                    android:background="@drawable/spinner_time_style"
                    android:entries="@array/gameSettings"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textViewSettingGameMode"
                    app:layout_constraintBottom_toTopOf="@id/textViewSettingSound"
                    />

                <TextView
                    android:id="@+id/textViewSettingSound"
                    style="@style/textViewSettingsModeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_settings_sound"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/spinnerGame"
                    app:layout_constraintBottom_toTopOf="@id/switchSettings"/>

                <Switch
                    android:id="@+id/switchSettings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:layout_constraintTop_toBottomOf="@id/textViewSettingSound"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <TextView
                    android:id="@+id/textViewSettingsSoundOff"
                    style="@style/textViewSettingsSound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_settings_off"
                    android:onClick="onClickSoundOff"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/switchSettings"
                    app:layout_constraintTop_toBottomOf="@+id/textViewSettingSound" />

                <TextView
                    android:id="@+id/textViewSettingsSoundOn"
                    style="@style/textViewSettingsSound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_settings_on"
                    android:onClick="onClickSoundOn"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/switchSettings"
                    app:layout_constraintTop_toBottomOf="@+id/textViewSettingSound" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>